part1/1.4/app2 (toDo)/backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-application-svc
spec:
  type: NodePort
  selector:
    app: todo-application
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 8080
